--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">   
 
-         <header></header>
+         <header>
+             <img src="images/logo-adare-restaurant.png">
+         </header>
          <nav></nav>
          <main></main>
          <footer></footer>
