Add mailto to reservation link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           carefully designed to bring you a truly satisfying Irish food
           experience that you are sure to remember.
         </p>
-        <a href="http://www.google.com" target="_blank">MAKE RESERVATION</a>
+        <a href="mailto:blazondev.web@gmail.com?Subject=Reservation" target="_blank">MAKE RESERVATION</a>
       </main>
 
       <section class="maps">
